--- a/doc/src/draft.tex
+++ b/doc/src/draft.tex
@@ -131,7 +131,7 @@ Strider koordineras av sin egna aktör, en finit tillståndsmaskin kallad Combat
 referens till en Combat, vilket leder till att det som max kan vara upp till en combat aktiv per rum. Combataktören skapas då spelare går i strid mot monster eller andra spelare
 och terminerar när det inte längre finns någon som anfaller någon annan.
 
-Efter att Cityaktören har skapat en Dungeonaktör ansvarar den nya aktören för sin egen livslängd och avsutar sig själv endast när det inte längre finns några spelare i den.
+Efter att Cityaktören har skapat en Dungeonaktör ansvarar den nya aktören för sin egen livslängd och avslutar sig själv endast när det inte längre finns några spelare i den.
 
 \begin{figure}[hbt]
 \centering
@@ -251,7 +251,7 @@ information att ta del av om hur vi skulle gå till väga för att göra detta. 
 begränsa oss när det gällde den utsträckning för vilket spelet skulle utvecklas. Att begränsa utvecklingen till en rimlig nivå för spelet 
 och samtidigt ha det tillräckligt intressant för den som spelar.
 
-En stor sak som vi inte han med under projektets gång är att implementera uppdrag. Detta är vad vårt nästa stek skulle vara, nu när det grundläggande fungerar som det ska. 
+En stor sak som vi inte han med under projektets gång är att implementera uppdrag. Detta är vad vårt nästa steg skulle vara, nu när det grundläggande fungerar som det ska. 
 
 \section{Appendix}
 
